--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
   <div class="container">
     <div class="page-header">
+      <a class="pull-right">Email: srestaswrnm@gmail.com</a><br>
+      <a class="pull-right">Phone: 9813004402</a><br>
+      <a href="https://github.com/bravegurkha/blood-donors/" class="pull-right">View Github Repo</a>
       <h3>Blood Donner Lists Nepal</h3>
+
     </div>
+    <p class="alert alert-info"><b>Note:</b> These are the names of blood donors available. If there is any problem with the list or you want to update any information then, please report us.</p>
     <div class="table-responsive">
       <table class="table table-condensed table-hover" id="table">
         <tr>
@@ -19,13 +24,14 @@
           <th>Name</th>
           <th>Blood Group</th>
           <th>Contact</th>
-        <tr>
+          <th>Address</th>
+          <tr>
+          </table>
+          <hr>
+        </div>
+      </div>
+    </body>
+    <script>
 
-        </table>
-    </div>
-  </div>
-</body>
-<script>
-
-</script>
-</html>
+    </script>
+    </html>
