--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a class="pull-right">Email: srestaswrnm@gmail.com</a><br>
       <a class="pull-right">Phone: 9813004402</a><br>
       <a href="https://github.com/bravegurkha/blood-donors/" class="pull-right">View Github Repo</a>
-      <h3>Blood Donner Lists Nepal</h3>
+      <h3>Blood Donors Lists Nepal</h3>
 
     </div>
     <p class="alert alert-info"><b>Note:</b> These are the names of blood donors available. If there is any problem with the list or you want to update any information then, please report us.</p>
